<resources>

    <string name="app_name">Project</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="channel_name">Your Channel Name</string>
    <string name="channel_description">Your Channel Description</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_Close">Close navigation drawer</string>
    <string name="title_activity_normal">normal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="location_icon_description">Location icon</string>
    <string name="menu_home">Home</string>
    <string name="Pizza_menu">Pizza menu</string>
    <string name="Your_orders">Your Orders</string>
    <string name="Your_favorites">Your favorites</string>
    <string name="Special_Offers">Special Offers</string>
    <string name="Profile">Profile</string>
    <string name="Call">Call us or Find us</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string-array name="sizes">
        <item>All</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="categories">
        <item>Veggies</item>
        <item>Meat</item>
        <item>Seafood</item>

    </string-array>
    <string name="select_size">Select Pizza Size (Small, Medium, Large)</string>
    <string name="select_category">select category Size</string>
    <string name="price_format">Price: $%.2f</string>
    <string name="Duration">Duration (days)</string>
    <string name="app_name2">PizzaApp</string>
    <string-array name="filter_criteria">
        <item>Name</item>
        <item>Price</item>
        <item>Size</item>
        <item>Category</item>
    </string-array>

    <string-array name="pizza_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string-array name="quantity_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="filter_options">
        <item>Price</item>
        <item>Size</item>
        <item>Category</item>
    </string-array>
    <!-- New Strings -->
    <string name="offer_name">Offer Name</string>
    <string name="description">Description</string>


    <string name="small_price">Small Price</string>
    <string name="medium_price">Medium Price</string>
    <string name="large_price">Large Price</string>
    <string name="original_price">Original Price</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="order">Order</string>

        <!-- Size options -->
        <string-array name="size_options">
            <item>Small</item>
            <item>Medium</item>
            <item>Large</item>
        </string-array>

        <!-- Price options -->
        <string-array name="price_options">
            <item>Under $20</item>
            <item>Over $20</item>
        </string-array>

    <string name="total_price">Total Price: $</string>

    <string-array name="pizza_types">
        <item>Margarita,Pepperoni</item>
        <item>Hawaiian,New York Style</item>
        <item>Calzone,Tandoori Chicken</item>
        <item>BBQ Chicken,Seafood Pizza</item>
        <item>Vegetarian,Buffalo Chicken</item>
    </string-array>
    <string name="menu_favorite">Favorite</string>



</resources>
